--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <title>Hello World</title>
 </head>
 <body>
-    <div class="container">
-        <div class="jumbotron mt-1">
+    <div class="container pt-1">
+        <div class="jumbotron">
             <h1 class="display-4">Hello World!</h1>
             <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
             <hr class="my-4">
