--- a/testpage1.html
+++ b/testpage1.html
@@ -9,6 +9,38 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
+    <style>
+        body {
+            font-size: 0.875rem; /*equivalent to 14px if html is 16px*/
+        }
+
+        .sidebar {
+            width: 13rem;
+            background-color: #e9ecef;
+        }
+
+        .sidebar-heading {
+            padding: 0.875rem 1.25rem;
+            /*font-size: 1.2rem;*/
+            /*font-size: 1.125rem;*/
+            /*font-size: 1rem;*/
+            /*font-size: 0.9375rem;*/
+            font-size: 0.875rem;
+            font-weight: bold;
+        }
+
+        .sticky {
+            position: -webkit-sticky; /* Safari */
+            position: sticky;
+            top: 0;
+        }
+
+        .custom-font-size {
+            font-size: 0.75rem;
+            /*font-size: 0.6875rem;*/
+        }
+    </style>
+    
     <title>Hello World</title>
 </head>
 <body>
